templates/istio-traffic-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-httpbin-default
spec:
  hosts: 
  - jiraiya.default
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-httpbin-uat
spec:
  hosts: 
  - httpbin.my-awesome.k8s.uat
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin.my-awesome.k8s.default
spec:
  hosts:
  - httpbin.my-awesome.k8s.default
  http:
  - retries:
      attempts: 0
    route:
    - destination:
        host: httpbin.my-awesome.k8s.default
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin.my-awesome.k8s.default
spec:
  host: httpbin.my-awesome.k8s.default
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 1
    outlierDetection:
      interval: 5s
      maxEjectionPercent: 100
